<resources>
    <string name="app_name">SimpleSettingsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_nav_header">SimpleSettingsApp</string>
    <string name="label_nav_misc">Contact info, etc</string>
    <string name="menu_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_home_fragment">Home Fragment</string>
    <string name="label_alias">Alias:</string>
    <string name="placeholder_boolean">enabled/disabled</string>
    <string name="label_notifications">Notifications:</string>
    <string name="placeholder_alias">Some Alias Here</string>
    <string name="label_preference_two">Preference Two:</string>
    <string name="button_refresh_ui">Refresh UI</string>
</resources>