<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_frag_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/home_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_home_fragment"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_frag" />


    <TextView
        android:id="@+id/alias_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alias"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/home_frag"
        app:layout_constraintEnd_toStartOf="@id/alias"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_alias"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alias_label"
        app:layout_constraintTop_toBottomOf="@+id/home_frag" />


    <TextView
        android:id="@+id/notification_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/label_notifications"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alias_label" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/placeholder_boolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notification_label"
        app:layout_constraintTop_toBottomOf="@+id/alias" />

    <TextView
        android:id="@+id/pref_one_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Preference One:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_label" />

    <TextView
        android:id="@+id/pref_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/placeholder_boolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pref_one_label"
        app:layout_constraintTop_toBottomOf="@+id/notification" />

    <TextView
        android:id="@+id/pref_two_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/label_preference_two"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_one_label" />

    <TextView
        android:id="@+id/pref_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/placeholder_boolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pref_two_label"
        app:layout_constraintTop_toBottomOf="@+id/pref_one" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_two_label" />

</androidx.constraintlayout.widget.ConstraintLayout>